<?xml version="1.0"?>
<package>
  <name>coil_states_msgs</name>
  <version>0.0.0</version>
  <description>The coil_states_msgs package</description>

  <maintainer email="aytackahveci93@gmail.com">Aytac Kahveci</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
