<?xml version="1.0" ?>
<package>
    <name>poseff_controllers</name>
      <version>0.0.0</version>
      <description>The poseff_controllers package</description>

      <maintainer email="aytackahveci93@gmail.com">Aytac Kahveci</maintainer>

      <license>BSD</license>
      
      <buildtool_depend>catkin</buildtool_depend>
      <build_depend>pluginlib</build_depend>
      <build_depend>roscpp</build_depend>
      <build_depend>controller_interface</build_depend>
      <build_depend>forward_command_controller</build_depend>
      <build_depend>forward_poseff_command_controller</build_depend>
      <run_depend>pluginlib</run_depend>
      <run_depend>roscpp</run_depend>
      <run_depend>forward_poseff_command_controller</run_depend>
      <run_depend>controller_interface</run_depend>
      <run_depend>forward_command_controller</run_depend>
      
      <export>
        <controller_interface plugin="${prefix}/poseff_controllers_plugins.xml"/>
      </export>
</package>
